--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,20 @@ VideoRenderingBackend/bin/Debug/netcoreapp3.1/VideoRenderingBackend.dll
 .vs/VideoRenderingBackend/v16/.suo
 .vs/VideoRenderingBackend/DesignTimeBuild/.dtbcache.v2
 .vs/VideoRenderingBackend/config/applicationhost.config
+.vs/VideoRenderingBackend/v16/.suo
+VideoRenderingBackend/bin/Debug/netcoreapp3.1/VideoRenderingBackend.dll
+VideoRenderingBackend/bin/Debug/netcoreapp3.1/VideoRenderingBackend.exe
+VideoRenderingBackend/bin/Debug/netcoreapp3.1/VideoRenderingBackend.pdb
+VideoRenderingBackend/bin/Debug/netcoreapp3.1/VideoRenderingBackend.runtimeconfig.dev.json
+VideoRenderingBackend/bin/Debug/netcoreapp3.1/VideoRenderingBackend.runtimeconfig.json
+VideoRenderingBackend/obj/Debug/netcoreapp3.1/VideoRenderingBackend.assets.cache
+VideoRenderingBackend/obj/Debug/netcoreapp3.1/VideoRenderingBackend.csproj.CoreCompileInputs.cache
+VideoRenderingBackend/obj/Debug/netcoreapp3.1/VideoRenderingBackend.csproj.FileListAbsolute.txt
+VideoRenderingBackend/obj/Debug/netcoreapp3.1/VideoRenderingBackend.csprojAssemblyReference.cache
+VideoRenderingBackend/obj/Debug/netcoreapp3.1/VideoRenderingBackend.dll
+VideoRenderingBackend/obj/Debug/netcoreapp3.1/VideoRenderingBackend.genruntimeconfig.cache
+VideoRenderingBackend/obj/Debug/netcoreapp3.1/VideoRenderingBackend.pdb
+VideoRenderingBackend/obj/project.assets.json
+VideoRenderingBackend/obj/project.nuget.cache
+VideoRenderingBackend/obj/VideoRenderingBackend.csproj.nuget.dgspec.json
+VideoRenderingBackend/obj/VideoRenderingBackend.csproj.nuget.g.props
